@@ -6,6 +6,7 @@ DIST tlp-gentoo-additions-0.3.8.1.tar.bz2 9227 SHA256 b04e22b5a5c63665ef742ca88a
 DIST tlp-gentoo-additions-0.3.9.tar.bz2 9209 SHA256 3e82e50c4f673ee3225f58aae90cac2eb04fdca4293572da09411dbbebe0f51b SHA512 cfef43fb3993a021520d7b6571d31b27130a1c58851c93cd1b8b936a1d73a7362f9d084553baf2675558b29a8d1dab5f119420b1e62a19e8a834d35776db1953 WHIRLPOOL e7c387cc2b377dfa345bc491fa941de7d95da0354b3b60e13dbd68c433d25d7e37ab0a1f8ad89b166d05054b5b10977869b0792f1dd9d35fd5a50c0ffd2e91ff
 EBUILD tlp-0.3.7.1.ebuild 5503 SHA256 f42b49612ee818b4e3a4d5ab41655b3de40d768535ad41561f89ab9206f77e61 SHA512 d6c383f99cbfd087c1803e02531a8c86cab0cfc03e3c4e26cc7477c9e43c4f94b74aceda6647ec6ab887b9af9c7398e2047efd0c03978c5de4c8025696256830 WHIRLPOOL 0d5698b88a20cdff62d53b059f7795735b8c991364c5609db159911537bf13d10cb6b6ec5dbf375b4c660689b5ecae7d604795fb3dba46c19b3aeb39ff3bb473
 EBUILD tlp-0.3.8.1.ebuild 5685 SHA256 d043bb46d71a8766b7e4d0eca373b8837287220b92caf9128f6b027c28ed6c58 SHA512 0bc3bd016006de6e598f082db40d04c0bacde6e3d0dca52daa7e452009d4350fe7c228fa3beb3b4bd7c2d1142850b70f1a30b2ee5fd7806c4f1f9ee012627c76 WHIRLPOOL 2b3e1ff6dcb72a3203a64dc9bb36855021df3c139de9786d35034cab37dd13fb3fea3a183c9af8a92755ca62c5577ef00a3423f41ab1ad8b8cad9b69b0eb085b
+EBUILD tlp-0.3.9.900_pre20130730.ebuild 5918 SHA256 ae42a88efde4378e2f5323a428bad5dd79523ebced5988a475d85876dbd49dc5 SHA512 cc93e1644228aa4a3880a96359f5bbc980e7030aa4f6f1658f180431171f47c9c5bcc32bbd54875e1493f7aff3398bf5cb35cf52ac29a892a0ed79a0adeb87e7 WHIRLPOOL 61437a0e91c5a81a195b199580a38120bef9edbe065c9172c70abfa566a8e3444d11e33317b2d0e720623028574d7223d307338a8ca220d0acdbf10269e5d66c
 EBUILD tlp-0.3.9.ebuild 5719 SHA256 13a608c4ce102ea8621d794bb41b1c11732b44ae1e88c635bc66723b949acde4 SHA512 9a151046b589a31ca7e3d1caed68d6cd4230a886e72b49d6c97a898b5a0180f54a46e3b941783a1649612c98e545865097dbf31a3ab764fbcce4252a9510be42 WHIRLPOOL ae7f34103150bfe348bc5cd0248bba9b7d970ccdca676a1e4dadf288b5de5d0dd451c29d33f5df75eac778cf0356dc144efbb19d377fd33a67915cfc10fb2408
-MISC ChangeLog 6437 SHA256 897e3296e789177eb5076556ac9242aec0e8abb875f8eb23316e3b4b3fbb7ddb SHA512 593bcbddb55de302c15a526774e37e1a696bddfd47b0c7a0190b59666d452015c5ddda25619512b16f2514b7717b5f93d5d73579be0972bd9ed6856806fc3287 WHIRLPOOL 94f4d151b8544fac50cf70ad0036f3406c7571cce206d272b2ce552dae735bc29fd1c8918de808aea5c3c0c9d5c5190637ba2e2babe4567e6686bdfb2ea1f642
+MISC ChangeLog 6799 SHA256 fe98aa3f2f5e1fb9454925befbb37ee2a8a1b48b002def053c4c416da5f2173d SHA512 da2ec086eb123e734ed35fe807dcd434ff129257053414966c55b455adad461c807e34c471af5ccf9d5b830e60df7cafc37c4e13c2962130ac1eae87b164e042 WHIRLPOOL bee7cc3c7399abb3a5b015dcfd8107c3a53d2a6d739f3c2b515859c056f9c822533665134ad6509a5c0128f4721be6eb085d34df10585ec5de6b2b6a2e0cec37
 MISC metadata.xml 1691 SHA256 fdfca8125ccdbc41454ee45f2047fb48d64d7e91559ee632b0f9429998fe2ced SHA512 24a4630f91705f6898b8091a37e712ef81356846b39c843725e3dfc1f413f690450c4638f0c049cdebd3af20bb2e52a0b7cc1a20e204e9a5a113efb757911a97 WHIRLPOOL 52ad6e53118146ef27435d93bc4d2937ad74d75dcd220b56ae0e09a13539d079bdc73cae16fdccab18c8448fdf77740e9fd382cc55f509336f34439241e79d63
